--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,6 +1,6 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
-app_home_number:
-    path: /index/home/number
-    controller: App\Controller\HomeController:number
+app_home:
+    path: /index/home/index
+    controller: App\Controller\HomeController:index
