--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,7 +1,7 @@
 doctrine:
     dbal:
         # DATABASE configuration
-        dbname: 'db_snowtricks'
+        dbname: 'db_snowtricks_2'
         host: 'localhost'
         port: 3306
         user: 'root'
