--- a/config/services.yaml
+++ b/config/services.yaml
@@ -14,7 +14,9 @@ services:
 
     App\Service\UploaderHelper:
         arguments: ['@doctrine.orm.entity_manager']
-
+    
+    App\Service\VideoUploader:
+        arguments: ['@doctrine.orm.entity_manager']
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
