--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 ###> symfony/webpack-encore-bundle ###
-/node_modules
-/vendor
-/public
+/node_modules/
+/vendor/
+/public/
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
