--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,6 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "doctrine/annotations": "^1.8",
         "ramsey/uuid-doctrine": "^1.6",
         "sensio/framework-extra-bundle": "^5.5",
         "symfony/apache-pack": "^1.0",
@@ -15,18 +14,18 @@
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.0.*",
         "symfony/framework-bundle": "5.0.*",
+        "symfony/mailer": "5.0.*",
         "symfony/orm-pack": "^1.0",
         "symfony/profiler-pack": "^1.0",
         "symfony/security-bundle": "5.0.*",
+        "symfony/security-core": "5.0.*",
+        "symfony/security-csrf": "5.0.*",
         "symfony/swiftmailer-bundle": "^3.4",
-        "symfony/translation": "^5.0",
         "symfony/twig-pack": "^1.0",
-        "symfony/validator": "5.0.*",
         "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^3.3",
         "symfony/maker-bundle": "^1.14"
     },
     "config": {
