--- a/composer.json
+++ b/composer.json
@@ -15,17 +15,20 @@
         "symfony/form": "5.0.*",
         "symfony/framework-bundle": "5.0.*",
         "symfony/mailer": "5.0.*",
+        "symfony/monolog-bundle": "^3.5",
         "symfony/orm-pack": "^1.0",
         "symfony/profiler-pack": "^1.0",
         "symfony/security-bundle": "5.0.*",
-        "symfony/security-core": "5.0.*",
-        "symfony/security-csrf": "5.0.*",
         "symfony/swiftmailer-bundle": "^3.4",
         "symfony/twig-pack": "^1.0",
+        "symfony/validator": "5.0.*",
         "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
+        "fzaninotto/faker": "^1.9",
+        "symfony/debug-pack": "^1.0",
         "symfony/maker-bundle": "^1.14"
     },
     "config": {
