Update security, Add remember me option

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -26,6 +26,11 @@ security:
                 authenticators:
                     - App\Security\LoginFormAuthenticator
 
+            remember_me:
+                secret:   '%kernel.secret%'
+                lifetime: 604800 # 1 week in seconds
+                path:     /
+
             logout:
                 path: app_user_logout
                 # where to redirect after logout
